Fix contrast issues. Add view more button back. Add service worker

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ section, div, nav{
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color: #252831;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -132,16 +132,16 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  background-color: #3397DB;
+  background-color: hsla(204, 70%, 25%, 1);
   align-items: center;
-  padding: 18px 0;
+  padding: 18px;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.4rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin-bottom: 8px;
 }
 .filter-options select {
   background-color: white;
@@ -150,10 +150,13 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 16px;
   padding: 0 10px;
   width: 200px;
   outline:#252831;
+}
+.filter-options:first-child select{
+  margin-left: 0;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -196,42 +199,36 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list li h2, a.details-link {
+#restaurants-list li h3{
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 16pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
-a.details-link{
-  display: inline-block;
-  margin-top: 18px;
-  margin-bottom: 9px;
-  text-decoration: none;
+#restaurants-list a{
   outline: none;
 }
-.details-link::after{
-  content: '';
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #f18200;
-  transition: width .3s;
-}
-.details-link:hover::after,.details-link:focus::after {
-  width: 100%;
+#restaurants-list li a:hover, #restaurants-list li a:focus {
+  -webkit-box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 12px 17px 2px rgba(0, 0, 0, 0.14), 0px 5px 22px 4px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 12px 17px 2px rgba(0, 0, 0, 0.14), 0px 5px 22px 4px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 12px 17px 2px rgba(0, 0, 0, 0.14), 0px 5px 22px 4px rgba(0, 0, 0, 0.12);
+  background-color: #f18200;
+  color: #fff;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
-#restaurants-list li a:not(.details-link) {
+#restaurants-list li a{
   background-color: orange;
-  /*border-bottom: 3px solid #eee;*/
-  color: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  color: #333;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
@@ -244,11 +241,8 @@ a.details-link{
   -ms-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
+  letter-spacing: 1px;
 }
-#restaurants-list li a:hover{
-  /*box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);*/
-}
-
 /* ====================== Restaurant Details ====================== */
 .inside header {
   position: fixed;
@@ -352,13 +346,14 @@ a.details-link{
 }
 
 .rating{
-  background-color:#FDA428;
+  background-color: #f18200;
   border-radius: 3px;
   font-weight: 400;
-  color: #fff;
+  color: #333;
   padding: 5px 10px;
   display: inline-block;
   margin-bottom: 10px;
+  letter-spacing: 1px;
 }
 
 .review-header{
@@ -397,6 +392,9 @@ a.details-link{
     flex: 1 1 20%;
     max-width: calc(20% - 30px);
   }
+  #restaurant-name{
+    font-size: 24pt;
+  }
 }
 @media screen and (min-width: 1280px) and (max-width: 1919px){
   #restaurant-address{
@@ -408,6 +406,14 @@ a.details-link{
   #restaurants-list li{
     flex: 1 1 25%;
     max-width: calc(25% - 30px);
+  }
+  #restaurant-name{
+    font-size: 22pt;
+  }
+}
+@media screen and (min-width: 960px){
+  .filter-options select{
+    width: 480px;
   }
 }
 @media screen and (max-width:959px){
@@ -441,6 +447,9 @@ a.details-link{
   #restaurants-list li{
     flex: 1 1 50%;
     max-width: calc(50% - 30px);
+  }
+  .filter-options select{
+    width: 100%;
   }
 }
 
